# ZS23_NSES_Zappe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: circle.txt  moons.txt  spiral.txt  tren_data1___23.txt  tren_data2___23.txt
doc/: params.txt
src/: main.cpp
src/graphics/: Visualization.cpp  Visualization.h
src/nn/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
src/utils/: DataLoader.cpp  DataLoader.h  Matrix.cpp  Matrix.h
